cilium-cli/connectivity/builder/manifests/client-egress-l7-http-method-port-range.yaml
---
# client2 is allowed to contact the echo Pod
# on port 8080 via POST method. HTTP introspection is enabled for client2.
# The toFQDNs section relies on DNS introspection being performed by
# the client-egress-only-dns policy.
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-l7-http-method-port-range
spec:
  description: "Allow POST <echo>:[4096-8191]/(public|private) from client2"
  endpointSelector:
    matchLabels:
      other: client
  egress:
  # Allow POST /public requests towards echo pods.
  - toEndpoints:
    - matchLabels:
        kind: echo
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
    toPorts:
    - ports:
      - port: "4096"
        endPort: 8191
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/public$"
        - method: "POST"
          path: "/private$"
